# mixlab

./: .dockerignore  .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.codex-context/: CHECKPOINT.md  HANDOFF.md  PROJECT.md  README.md  TASK.md
.github/workflows/: acceptance-evidence-kit.yml  cutter-desktop-windows.yml  docker-admin.yml
apps/admin-web/: index.html  package.json
apps/cutter-desktop/: package.json
apps/cutter-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/cutter-desktop/src-tauri/binaries/: .gitignore  README.md
apps/cutter-desktop/src-tauri/capabilities/: default.json
apps/cutter-desktop/src-tauri/resources/: default-desktop-config.json
apps/cutter-desktop/src-tauri/src/: main.rs
apps/cutter-desktop/src-tauri/windows/: installer-hooks.nsh
apps/cutter-web/: index.html  package.json  tsconfig.json
apps/ui-fixtures/: index.html  package.json
docker/: admin-runtime.Dockerfile  admin-web.Dockerfile
docker/nginx/: admin-web.conf
docs/: change-request-arch-003-typescript-admin-api.md  spec-traceability.md  v1-scope-guard.md
docs/acceptance/: local-web-real-nas.md  m1-protocol-doctor-core.md  m12-4-admin-long-run-acceptance.md  m18-1-windows-cutter-desktop.md  m18-3-github-actions-windows-package.md  m3-ui-foundation.md  m4-cutter-workbench.md  m5-admin-console.md  m6-search-sqlite-index.md  m7-local-cutting-queue.md  m8-cutter-workspace-ui-binding.md  stage-0-rebaseline.md
docs/deployment/: m19-nas-docker.md  migration-secrets-template.md  new-mac-codex-handoff.md
(+208 files in other folders)
