[package]
name = "mixlab-cutter-desktop"
version = "0.18.7"
description = "MixLab Cutter Windows Desktop"
authors = ["MixLab"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2" }
tauri-plugin-dialog = "2"
